# diplomacy_searchbot

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  fair_activate.sh  pyproject.toml  requirements.txt  run.py  setup.py  test_situations.json
dipcc/: .gitignore  CMakeLists.txt  README.md  compile.sh  setup.py
dipcc/dipcc/cc/: .template.h  adjacencies.h  adjudicator.cc  cfrstats.cc  cfrstats.h  checks.cc  checks.h  civil_disorder_distances.h  data_fields.cc  data_fields.h  encoding.cc  encoding.h  encoding_impl.cc  encoding_v1.cc  encoding_v2.cc  enums.cc  enums.h  exceptions.h  game.cc  game.h  game_id.h  game_state.cc  game_state.h  hash.h  json.cc  json.h  loc.cc  loc.h  message.h  order.cc  order.h  orders_encoder.cc  orders_encoder.h  owned_unit.cc  owned_unit.h  phase.cc  phase.h  power.cc  power.h  scoring.cc  (+7 more)
dipcc/dipcc/profiling/: profile.cc  profile_late.cc
dipcc/dipcc/pybind/: encoding.h  get_message_history.cc  get_orderable_locations.cc  get_phase_data.cc  get_phase_history.cc  logs.cc  messaging.cc  messaging.h  phase_data.h  py_cfrstats.cc  py_dict.cc  py_dict.h  py_game_get_units.h  pybind.cc  thread_pool.h  valid_orders_encoder.h
dipcc/dipcc/tests/: consts.h  test_datc.cc  test_eq_11May_game4.cc  test_eq_12May_game2.cc  test_eq_12May_game3.cc  test_eq_12May_game4.cc  test_eq_13May_game1.cc  test_eq_13May_game1b.cc  test_eq_13May_game2.cc  test_eq_13May_game2b.cc  test_eq_13May_game3.cc  test_eq_13May_game3b.cc  test_eq_game_106326.cc  test_eq_game_107216.cc  test_eq_game_109147.cc  test_eq_game_109770.cc.disabled  test_eq_game_110170.cc.disabled  test_eq_game_110703.cc  test_eq_game_115266.cc.disabled  test_eq_game_117382.cc.disabled  test_eq_game_119959.cc.disabled  test_eq_game_126286.cc  test_eq_game_126618.cc.disabled  test_eq_game_129284.cc.disabled  test_eq_game_130859.cc  test_eq_game_133327.cc.disabled  test_eq_game_136404.cc  (+28 more)
dipcc/python/: profile_game.py  profile_mila.py  render_eq_tests.sh  render_equivalence_test.py  repro_crash.py  test_encoding.py  test_pybind.py  test_thread_pool.py
heyhi/: run.py  (+6 more)
(+375 files in other folders)
